// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieDetailsPage component should render with other elements, depends on props 1`] = `
<div
  className="wrapper"
>
  <div
    className="details"
    style={
      Object {
        "backgroundImage": "url(https://image.tmdb.org/t/p/w1280url)",
      }
    }
  >
    <Header />
    <main
      className="main"
    >
      <Memo(Connect(MovieInfoContainer)) />
      <div
        className="buttons"
      >
        <Memo(Connect(ButtonsWrapperContainer)) />
      </div>
    </main>
  </div>
  <Memo(Connect(MovieListContainer)) />
  <div
    className="loading"
  >
    <Spinner />
  </div>
  <Memo(Connect(FooterContainer)) />
</div>
`;

exports[`MovieDetailsPage component should render without crashing 1`] = `
<div
  className="wrapper"
>
  <div
    className="details"
    style={
      Object {
        "backgroundImage": null,
      }
    }
  >
    <Header />
    <main
      className="main"
    >
      <Memo(Connect(MovieInfoContainer)) />
      <div
        className="buttons"
      >
        <Memo(Connect(ButtonsWrapperContainer)) />
      </div>
    </main>
  </div>
  <Memo(Connect(MovieListContainer)) />
  <div
    className="loading"
  />
</div>
`;
